warnings solved